automatically backed up by learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,1 @@
-<%= Post.create(:name = params["name"], :content = params["content"]) %>
+<%= Post.create(name = params["name"], content = params["content"]) %>
